# vulkan-galaxy

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/core/: Application.cpp  Application.h  Logger.cpp  Logger.h  Window.cpp  Window.h
src/renderer/: Buffer.cpp  Buffer.h  CommandManager.cpp  CommandManager.h  Pipeline.cpp  Pipeline.h  PipelineManager.cpp  PipelineManager.h  Shader.cpp  Shader.h  SwapChain.cpp  SwapChain.h  Synchronization.cpp  Synchronization.h  VulkanContext.cpp  VulkanContext.h  VulkanProxy.cpp  VulkanProxy.h
